Swagger integration for REST APIs

--- a/ocrDemoProject/ocrDemoProject/WebContent/WEB-INF/web.xml
+++ b/ocrDemoProject/ocrDemoProject/WebContent/WEB-INF/web.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app id="ocrDemo_ID" version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 	<display-name>ocrDemoProject</display-name>
-	<display-name>ocrDemoProject</display-name>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
@@ -16,11 +15,25 @@
 	    
 	    <init-param>
 	        <param-name>com.sun.jersey.config.property.packages</param-name>
-	        <param-value>com.ocr</param-value>
+	        <param-value>com.ocr;com.wordnik.swagger.jersey.listing</param-value>
 	    </init-param>
+	    <load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
 	    <servlet-name>OCR Rest Service</servlet-name>
 	    <url-pattern>/rest/*</url-pattern>
 	</servlet-mapping>
+	<servlet>
+		<servlet-name>JerseyJaxrsConfig</servlet-name>
+		<servlet-class>com.wordnik.swagger.jersey.config.JerseyJaxrsConfig</servlet-class>
+		<init-param>
+			<param-name>api.version</param-name>
+			<param-value>1.0.0</param-value>
+		</init-param>
+		<init-param>
+			<param-name>swagger.api.basepath</param-name>
+			<param-value>http://localhost:7001/ocrDemoProject/rest</param-value>
+		</init-param>
+		<load-on-startup>2</load-on-startup>
+	</servlet>
 </web-app>
